# virtualarcade

./: CMakeLists.txt  README.md  TODO.md  imgui.ini
common/data/ram/generic_ram/: ram.json
common/data/rom/generic_rom/: rom.json
common/include/: arcade_interface.h  arcade_spec.h  config.h  image_format.h
common/src/: config.cpp
configs/: generic_system.json
cpus/generic_cpu/: CMakeLists.txt
cpus/generic_cpu/data/: cpu.json  lang6502.json
cpus/generic_cpu/include/: generic_cpu.h
cpus/generic_cpu/src/: assembler.cpp  assembler.h  cpu_impl.cpp
editor/: CMakeLists.txt
editor/src/: app_state.h  assembler.h  dialog_manager.cpp  dialog_manager.h  main.cpp  menu_handler.cpp  menu_handler.h
editor/src/panels/: code_panel.h  motherboard_panel.h  rom_panel.h
examples/generic/: helloworld.asm
gpus/generic_gpu/: CMakeLists.txt
gpus/generic_gpu/data/: gpu.json
gpus/generic_gpu/include/: generic_gpu.h
gpus/generic_gpu/src/: gpu_impl.cpp
runner/: CMakeLists.txt
runner/src/: main.cpp
